export class FabricX {
  public async initNetwork() {
    console.log('Initializing network...');
    // TODO: Implement gRPC call to Go runtime
  }

  public async deployChaincode(chaincodeName: string) {
    console.log(`Deploying chaincode: ${chaincodeName}`);
    // TODO: Implement gRPC call to Go runtime
  }

  public async invoke(chaincode: string, func: string, args: string[]) {
    console.log(`Invoking ${chaincode}.${func} with args: ${args}`);
    // TODO: Implement gRPC call to Go runtime
  }

  public async query(chaincode: string, func: string, args: string[]) {
    console.log(`Querying ${chaincode}.${func} with args: ${args}`);
    // TODO: Implement gRPC call to Go runtime
  }

  public async stopNetwork() {
    console.log('Stopping network...');
    // TODO: Implement gRPC call to Go runtime
  }
}
